--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ packages/*
 */results.xml
 */obj/*
 *.Extra.json
-*/Sources/*
+*/Sources/*.txt
+*/Sources/*.html
 
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
