Little bit of cleanup. Put the source folder name into appSettings.json.

--- a/WordSwapper/WordSwapper.csproj
+++ b/WordSwapper/WordSwapper.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Sources\PUT FILES TO SWAP HERE.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Sources\PUT FILES TO SWAP HERE.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Inflector" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
