--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -25,6 +25,30 @@
       "CanBePossessive": true
     },
     {
+      "Word": "manly",
+      "Replacement": "womanly",
+      "CanBePlural": false,
+      "CanBePossessive": false
+    },
+    {
+      "Word": "womanly",
+      "Replacement": "manly",
+      "CanBePlural": false,
+      "CanBePossessive": false
+    },
+    {
+      "Word": "manhood",
+      "Replacement": "womanhood",
+      "CanBePlural": true,
+      "CanBePossessive": true
+    },
+    {
+      "Word": "womanhood",
+      "Replacement": "manhood",
+      "CanBePlural": true,
+      "CanBePossessive": true
+    },
+    {
       "Word": "boy",
       "Replacement": "girl",
       "CanBePlural": true,
@@ -33,6 +57,36 @@
     {
       "Word": "girl",
       "Replacement": "boy",
+      "CanBePlural": true,
+      "CanBePossessive": true
+    },
+    { // This one is a bit of a lone-wolf that probably warrants more examination
+      "Word": "girly",
+      "Replacement": "boyish",
+      "CanBePlural": false,
+      "CanBePossessive": false
+    },
+    {
+      "Word": "boyish",
+      "Replacement": "girlish",
+      "CanBePlural": false,
+      "CanBePossessive": false
+    },
+    {
+      "Word": "girlish",
+      "Replacement": "boyish",
+      "CanBePlural": false,
+      "CanBePossessive": false
+    },
+    {
+      "Word": "boyhood",
+      "Replacement": "girlhood",
+      "CanBePlural": true,
+      "CanBePossessive": true
+    },
+    {
+      "Word": "girlhood",
+      "Replacement": "boyhood",
       "CanBePlural": true,
       "CanBePossessive": true
     },
