--- a/WordSwapper/appSettings.json
+++ b/WordSwapper/appSettings.json
@@ -1,4 +1,5 @@
 ﻿{
   "ReplacementIndicator": "|*|",
-  "ReplacementIndicatorRegex": "\\|\\*\\|"
+  "ReplacementIndicatorRegex": "\\|\\*\\|",
+  "SourceDirectory": "Sources"
 }
