Added ability to POST to an NLP API and return chunked and tagged parts of speech. Still not sure if it'll 100% fit my purpose of being able to identify special cases like his/her/hers, but it's a start.

--- a/WordSwapper/WordSwapper.csproj
+++ b/WordSwapper/WordSwapper.csproj
@@ -17,6 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appSettings.PartsOfSpeechTags.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appSettings.WordsToSwap.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -26,6 +29,10 @@
     <None Update="appSettings.WordsToSwap.Extra.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Tagger\" />
   </ItemGroup>
 
 </Project>
