--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -167,12 +167,16 @@
     { // This is a very special case that requires more thought
       "Word": "his",
       "Replacement": "her", // Sometimes this could be "hers"
+      "SpecialCasePOSTag": "PRP$", // NOTE: This is not perfect. "The pencil is his" comes back in NLP as PRP$, but "The pencil is hers" comes back as NNS. Maybe we should try NLP-tagging the supposed replacement and see if it fits before settling on a final replacement?
+      "SpecialCaseAlternative": "hers",
       "CanBePlural": false,
       "CanBePossessive": false
     },
     { // This is a very special case that requires more thought
       "Word": "her",
       "Replacement": "his", // Sometimes this can be "him"
+      "SpecialCasePOSTag": "PRP$", // Possessive Pronoun. NOTE: This is not perfect. "I'm looking at her" comes back as PRP$, but "I'm looking at him" comes back as PRP
+      "SpecialCaseAlternative": "him",
       "CanBePlural": true,
       "CanBePossessive": false
     },
