--- a/WordSwapper/appSettings.json
+++ b/WordSwapper/appSettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ReplacementIndicator": "|*|",
   "ReplacementIndicatorRegex": "\\|\\*\\|",
-  "SourceDirectory": "Sources"
+  "SourceDirectory": "Sources",
+  "NlpApiUrl": "http://text-processing.com/api/tag/"
 }
