Added link to web page with complete list of parts of speech tags.

--- a/WordSwapper/appSettings.PartsOfSpeechTags.json
+++ b/WordSwapper/appSettings.PartsOfSpeechTags.json
@@ -1,4 +1,5 @@
 ﻿{
+  // List of tags: https://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html
   "PartsOfSpeechTag": [
     {
       "Tag": "CC",
