Realized that the CanBePossessive flag and the regex check for possessives was entirely unnecessary.

--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -3,165 +3,138 @@
     {
       "Word": "male",
       "Replacement": "female",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "female",
       "Replacement": "male",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "man",
       "Replacement": "woman",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "woman",
       "Replacement": "man",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "manly",
       "Replacement": "womanly",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "womanly",
       "Replacement": "manly",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "manhood",
       "Replacement": "womanhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "womanhood",
       "Replacement": "manhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "boy",
       "Replacement": "girl",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "girl",
       "Replacement": "boy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     { // This one is a bit of a lone-wolf that probably warrants more examination
       "Word": "girly",
       "Replacement": "boyish",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "boyish",
       "Replacement": "girlish",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "girlish",
       "Replacement": "boyish",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "boyhood",
       "Replacement": "girlhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "girlhood",
       "Replacement": "boyhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "guy",
       "Replacement": "girl",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "girl",
       "Replacement": "guy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "dude",
       "Replacement": "chick",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "chick",
       "Replacement": "dude",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "boyfriend",
       "Replacement": "girlfriend",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "girlfriend",
       "Replacement": "boyfriend",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "BF",
       "Replacement": "GF",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "GF",
       "Replacement": "BF",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "husband",
       "Replacement": "wife",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "wife",
       "Replacement": "husband",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "he",
       "Replacement": "she",
       "CanBePlural": false,
-      "CanBePossessive": false,
       "CanBeContraction": true
     },
     {
       "Word": "she",
       "Replacement": "he",
       "CanBePlural": false,
-      "CanBePossessive": false,
       "CanBeContraction": true
     },
     { // This is a very special case that requires more thought
@@ -169,250 +142,209 @@
       "Replacement": "her", // Sometimes this could be "hers"
       "SpecialCasePOSTag": "PRP$", // NOTE: This is not perfect. "The pencil is his" comes back in NLP as PRP$, but "The pencil is hers" comes back as NNS. Maybe we should try NLP-tagging the supposed replacement and see if it fits before settling on a final replacement?
       "SpecialCaseAlternative": "hers",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     { // This is a very special case that requires more thought
       "Word": "her",
       "Replacement": "his", // Sometimes this can be "him"
       "SpecialCasePOSTag": "PRP$", // Possessive Pronoun. NOTE: This is not perfect. "I'm looking at her" comes back as PRP$, but "I'm looking at him" comes back as PRP
       "SpecialCaseAlternative": "him",
-      "CanBePlural": true,
-      "CanBePossessive": false
+      "CanBePlural": true
     },
     {
       "Word": "him",
       "Replacement": "her",
-      "CanBePlural": false,
-      "CanBePossessive": false
+      "CanBePlural": false
     },
     {
       "Word": "himself",
       "Replacement": "herself",
-      "CanBePlural": true,
-      "CanBePossessive": false
+      "CanBePlural": true
     },
     {
       "Word": "herself",
       "Replacement": "himself",
-      "CanBePlural": true,
-      "CanBePossessive": false
+      "CanBePlural": true
     },
     {
       "Word": "feminist",
       "Replacement": "men's rights activist",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "men's rights activist",
       "Replacement": "feminist",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "feminism",
       "Replacement": "men's rights activism",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "men's rights activism",
       "Replacement": "feminism",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "patriarch",
       "Replacement": "matriarch",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "matriarch",
       "Replacement": "patriarch",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "patriarchy",
       "Replacement": "matriarchy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "matriarchy",
       "Replacement": "patriarchy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "patriarchal",
       "Replacement": "matriarchal",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "matriarchal",
       "Replacement": "patriarchal",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "paternal",
       "Replacement": "maternal",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "maternal",
       "Replacement": "paternal",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "misogyny",
       "Replacement": "misandry",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "misandry",
       "Replacement": "misogyny",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "misogynist",
       "Replacement": "misandrist",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "misandrist",
       "Replacement": "misogynist",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "masculine",
       "Replacement": "feminine",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "feminine",
       "Replacement": "masculine",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "masculinity",
       "Replacement": "femininity",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "femininity",
       "Replacement": "masculinity",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "father",
       "Replacement": "mother",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "mother",
       "Replacement": "father",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "fatherly",
       "Replacement": "motherly",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "motherly",
       "Replacement": "fatherly",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "fatherhood",
       "Replacement": "motherhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "motherhood",
       "Replacement": "fatherhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "dad",
       "Replacement": "mom",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "mom",
       "Replacement": "dad",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "daddy",
       "Replacement": "mommy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "mommy",
       "Replacement": "daddy",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "brother",
       "Replacement": "sister",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "sister",
       "Replacement": "brother",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "brotherly",
       "Replacement": "sisterly",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "sisterly",
       "Replacement": "brotherly",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "brotherhood",
       "Replacement": "sisterhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     },
     {
       "Word": "sisterhood",
       "Replacement": "brotherhood",
-      "CanBePlural": true,
-      "CanBePossessive": true
+      "CanBePlural": true
     }
   ]
 }
