Added some extra notes to the TODO about capitalization. Parameterized the beginning word boundary regex. Added removal of the <head> tag in the HTML Parser. Not sure if I'm married to this, but if the HTML document contains an <article> tag then we just extract that text. Otherwise we extract all text. Added a few more words to swap.

--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -75,7 +75,7 @@
       "Replacement": "boyhood",
       "CanBePlural": true
     },
-    {
+    { // TODO: Add something to attempt to differentiate between "guy" and the actual proper name "Guy" (as in Ritchie)
       "Word": "guy",
       "Replacement": "girl",
       "CanBePlural": true
@@ -83,6 +83,21 @@
     {
       "Word": "girl",
       "Replacement": "guy",
+      "CanBePlural": true
+    },
+    { // TODO: Add something to attempt to differentiate between "gal" and the actual proper name "Gal" (as in Gadot)
+      "Word": "gal",
+      "Replacement": "guy",
+      "CanBePlural": true
+    },
+    {
+      "Word": "bloke",
+      "Replacement": "gal",
+      "CanBePlural": true
+    },
+    {
+      "Word": "fella",
+      "Replacement": "gal",
       "CanBePlural": true
     },
     {
@@ -93,6 +108,16 @@
     {
       "Word": "chick",
       "Replacement": "dude",
+      "CanBePlural": true
+    },
+    {
+      "Word": "lad",
+      "Replacement": "lass",
+      "CanBePlural": true
+    },
+    {
+      "Word": "lass",
+      "Replacement": "lad",
       "CanBePlural": true
     },
     {
@@ -327,6 +352,16 @@
       "CanBePlural": true
     },
     {
+      "Word": "brethren",
+      "Replacement": "sistren",
+      "CanBePlural": true
+    },
+    {
+      "Word": "sistren",
+      "Replacement": "brethren",
+      "CanBePlural": true
+    },
+    {
       "Word": "brotherly",
       "Replacement": "sisterly",
       "CanBePlural": true
@@ -344,6 +379,26 @@
     {
       "Word": "sisterhood",
       "Replacement": "brotherhood",
+      "CanBePlural": true
+    },
+    {
+      "Word": "fraternal",
+      "Replacement": "sororal",
+      "CanBePlural": true
+    },
+    {
+      "Word": "sororal",
+      "Replacement": "fraternal",
+      "CanBePlural": true
+    },
+    {
+      "Word": "fraternity",
+      "Replacement": "sorority",
+      "CanBePlural": true
+    },
+    {
+      "Word": "sorority",
+      "Replacement": "fraternity",
       "CanBePlural": true
     }
   ]
