Added OptionalPrefix as an option for the list of words to swap. This simplifies the handling of words like mother/grandmother by not necessitating both versions of the word be defined. Added loading of additional words from appSettings.WordsToSwap.Extra.json. Played around with replacing illegal characters but didn't totally succeed. Added some additional words. Cleaned up the HtmlParser a little bit.

--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -101,6 +101,16 @@
       "CanBePlural": true
     },
     {
+      "Word": "lady",
+      "Replacement": "gentleman",
+      "CanBePlural": true
+    },
+    {
+      "Word": "gentleman",
+      "Replacement": "lady",
+      "CanBePlural": true
+    },
+    {
       "Word": "dude",
       "Replacement": "chick",
       "CanBePlural": true
@@ -119,6 +129,46 @@
       "Word": "lass",
       "Replacement": "lad",
       "CanBePlural": true
+    },
+    {
+      "Word": "king",
+      "Replacement": "queen",
+      "CanBePlural": true
+    },
+    {
+      "Word": "queen",
+      "Replacement": "king",
+      "CanBePlural": true
+    },
+    {
+      "Word": "kingly",
+      "Replacement": "queenly",
+      "CanBePlural": false
+    },
+    {
+      "Word": "queenly",
+      "Replacement": "kingly",
+      "CanBePlural": false
+    },
+    {
+      "Word": "prince",
+      "Replacement": "princess",
+      "CanBePlural": true
+    },
+    {
+      "Word": "princess",
+      "Replacement": "prince",
+      "CanBePlural": true
+    },
+    {
+      "Word": "princely",
+      "Replacement": "princessly",
+      "CanBePlural": false
+    },
+    {
+      "Word": "princessly",
+      "Replacement": "princely",
+      "CanBePlural": false
     },
     {
       "Word": "boyfriend",
@@ -294,51 +344,108 @@
     {
       "Word": "father",
       "Replacement": "mother",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "mother",
       "Replacement": "father",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "fatherly",
       "Replacement": "motherly",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "motherly",
       "Replacement": "fatherly",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "fatherhood",
       "Replacement": "motherhood",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "motherhood",
       "Replacement": "fatherhood",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "dad",
       "Replacement": "mom",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "mom",
       "Replacement": "dad",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "daddy",
       "Replacement": "mommy",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
     },
     {
       "Word": "mommy",
       "Replacement": "daddy",
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
+    },
+    {
+      "Word": "pa",
+      "Replacement": "ma",
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
+    },
+    {
+      "Word": "ma",
+      "Replacement": "pa",
+      "CanBePlural": true,
+      "OptionalPrefix": "grand"
+    },
+    {
+      "Word": "stepfather",
+      "Replacement": "stepmother",
+      "CanBePlural": true
+    },
+    {
+      "Word": "stepmother",
+      "Replacement": "stepfather",
+      "CanBePlural": true
+    },
+    {
+      "Word": "stepdad",
+      "Replacement": "stepmom",
+      "CanBePlural": true
+    },
+    {
+      "Word": "stepmom",
+      "Replacement": "stepdad",
+      "CanBePlural": true
+    },    
+    {
+      "Word": "grandad", // Sometimes "grand dad" is spelled "grandad"
+      "Replacement": "grandma",
+      "CanBePlural": true
+    },
+    {
+      "Word": "gramp",
+      "Replacement": "gram",
+      "CanBePlural": true
+    },
+    {
+      "Word": "gram",
+      "Replacement": "gramp",
       "CanBePlural": true
     },
     {
@@ -399,6 +506,36 @@
     {
       "Word": "sorority",
       "Replacement": "fraternity",
+      "CanBePlural": true
+    },
+    {
+      "Word": "son",
+      "Replacement": "daughter",
+      "CanBePlural": true
+    },
+    {
+      "Word": "daughter",
+      "Replacement": "son",
+      "CanBePlural": true
+    },
+    {
+      "Word": "nephew",
+      "Replacement": "niece",
+      "CanBePlural": true
+    },
+    {
+      "Word": "niece",
+      "Replacement": "nephew",
+      "CanBePlural": true
+    },
+    {
+      "Word": "uncle",
+      "Replacement": "aunt",
+      "CanBePlural": true
+    },
+    {
+      "Word": "aunt",
+      "Replacement": "uncle",
       "CanBePlural": true
     }
   ]
