Added OptionalSuffixes and changed OptionalPrefix into a List of strings rather than just one string.
These changes require a bit of additional testing to make sure I didn't overlook anything.

TODO: Allow for separate customization of prefixes/suffixes for the word and its replacement.

--- a/WordSwapper/appSettings.WordsToSwap.json
+++ b/WordSwapper/appSettings.WordsToSwap.json
@@ -13,67 +13,31 @@
     {
       "Word": "man",
       "Replacement": "woman",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "woman",
       "Replacement": "man",
-      "CanBePlural": true
-    },
-    {
-      "Word": "manly",
-      "Replacement": "womanly",
-      "CanBePlural": false
-    },
-    {
-      "Word": "womanly",
-      "Replacement": "manly",
-      "CanBePlural": false
-    },
-    {
-      "Word": "manhood",
-      "Replacement": "womanhood",
-      "CanBePlural": true
-    },
-    {
-      "Word": "womanhood",
-      "Replacement": "manhood",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "boy",
       "Replacement": "girl",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ish", "hood" ]
     },
     {
       "Word": "girl",
       "Replacement": "boy",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ish", "hood" ]
     },
     { // This one is a bit of a lone-wolf that probably warrants more examination
       "Word": "girly",
       "Replacement": "boyish",
       "CanBePlural": false
-    },
-    {
-      "Word": "boyish",
-      "Replacement": "girlish",
-      "CanBePlural": false
-    },
-    {
-      "Word": "girlish",
-      "Replacement": "boyish",
-      "CanBePlural": false
-    },
-    {
-      "Word": "boyhood",
-      "Replacement": "girlhood",
-      "CanBePlural": true
-    },
-    {
-      "Word": "girlhood",
-      "Replacement": "boyhood",
-      "CanBePlural": true
     },
     { // TODO: Add something to attempt to differentiate between "guy" and the actual proper name "Guy" (as in Ritchie)
       "Word": "guy",
@@ -101,13 +65,23 @@
       "CanBePlural": true
     },
     {
+      "Word": "gentleman",
+      "Replacement": "lady",
+      "CanBePlural": true
+    },
+    {
       "Word": "lady",
       "Replacement": "gentleman",
       "CanBePlural": true
     },
     {
-      "Word": "gentleman",
-      "Replacement": "lady",
+      "Word": "gentlemanly",
+      "Replacement": "ladylike",
+      "CanBePlural": true
+    },
+    {
+      "Word": "ladylike",
+      "Replacement": "gentlemanly",
       "CanBePlural": true
     },
     {
@@ -133,42 +107,26 @@
     {
       "Word": "king",
       "Replacement": "queen",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "like" ]
     },
     {
       "Word": "queen",
       "Replacement": "king",
-      "CanBePlural": true
-    },
-    {
-      "Word": "kingly",
-      "Replacement": "queenly",
-      "CanBePlural": false
-    },
-    {
-      "Word": "queenly",
-      "Replacement": "kingly",
-      "CanBePlural": false
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "like" ]
     },
     {
       "Word": "prince",
       "Replacement": "princess",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "like" ]
     },
     {
       "Word": "princess",
       "Replacement": "prince",
-      "CanBePlural": true
-    },
-    {
-      "Word": "princely",
-      "Replacement": "princessly",
-      "CanBePlural": false
-    },
-    {
-      "Word": "princessly",
-      "Replacement": "princely",
-      "CanBePlural": false
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "like" ]
     },
     {
       "Word": "boyfriend",
@@ -264,31 +222,23 @@
     {
       "Word": "patriarch",
       "Replacement": "matriarch",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "al", "y" ]
     },
     {
       "Word": "matriarch",
       "Replacement": "patriarch",
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "al", "y" ]
+    },
+    {
+      "Word": "paternity",
+      "Replacement": "maternity",
       "CanBePlural": true
     },
     {
-      "Word": "patriarchy",
-      "Replacement": "matriarchy",
-      "CanBePlural": true
-    },
-    {
-      "Word": "matriarchy",
-      "Replacement": "patriarchy",
-      "CanBePlural": true
-    },
-    {
-      "Word": "patriarchal",
-      "Replacement": "matriarchal",
-      "CanBePlural": true
-    },
-    {
-      "Word": "matriarchal",
-      "Replacement": "patriarchal",
+      "Word": "maternity",
+      "Replacement": "paternity",
       "CanBePlural": true
     },
     {
@@ -345,94 +295,52 @@
       "Word": "father",
       "Replacement": "mother",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ],
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "mother",
       "Replacement": "father",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
-    },
-    {
-      "Word": "fatherly",
-      "Replacement": "motherly",
-      "CanBePlural": true,
-      "OptionalPrefix": "grand"
-    },
-    {
-      "Word": "motherly",
-      "Replacement": "fatherly",
-      "CanBePlural": true,
-      "OptionalPrefix": "grand"
-    },
-    {
-      "Word": "fatherhood",
-      "Replacement": "motherhood",
-      "CanBePlural": true,
-      "OptionalPrefix": "grand"
-    },
-    {
-      "Word": "motherhood",
-      "Replacement": "fatherhood",
-      "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ],
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "dad",
       "Replacement": "mom",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ]
     },
     {
       "Word": "mom",
       "Replacement": "dad",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ]
     },
     {
       "Word": "daddy",
       "Replacement": "mommy",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ]
     },
     {
       "Word": "mommy",
       "Replacement": "daddy",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "step", "grand" ]
     },
     {
       "Word": "pa",
       "Replacement": "ma",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "grand" ]
     },
     {
       "Word": "ma",
       "Replacement": "pa",
       "CanBePlural": true,
-      "OptionalPrefix": "grand"
+      "OptionalPrefixes": [ "grand" ]
     },
-    {
-      "Word": "stepfather",
-      "Replacement": "stepmother",
-      "CanBePlural": true
-    },
-    {
-      "Word": "stepmother",
-      "Replacement": "stepfather",
-      "CanBePlural": true
-    },
-    {
-      "Word": "stepdad",
-      "Replacement": "stepmom",
-      "CanBePlural": true
-    },
-    {
-      "Word": "stepmom",
-      "Replacement": "stepdad",
-      "CanBePlural": true
-    },    
     {
       "Word": "grandad", // Sometimes "grand dad" is spelled "grandad"
       "Replacement": "grandma",
@@ -451,12 +359,14 @@
     {
       "Word": "brother",
       "Replacement": "sister",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "sister",
       "Replacement": "brother",
-      "CanBePlural": true
+      "CanBePlural": true,
+      "OptionalSuffixes": [ "ly", "hood" ]
     },
     {
       "Word": "brethren",
@@ -466,26 +376,6 @@
     {
       "Word": "sistren",
       "Replacement": "brethren",
-      "CanBePlural": true
-    },
-    {
-      "Word": "brotherly",
-      "Replacement": "sisterly",
-      "CanBePlural": true
-    },
-    {
-      "Word": "sisterly",
-      "Replacement": "brotherly",
-      "CanBePlural": true
-    },
-    {
-      "Word": "brotherhood",
-      "Replacement": "sisterhood",
-      "CanBePlural": true
-    },
-    {
-      "Word": "sisterhood",
-      "Replacement": "brotherhood",
       "CanBePlural": true
     },
     {
